Update and rename RexGames.html to QexGames.html

--- a/QexGames.html
+++ b/QexGames.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rex Games</title>
+    <title>Qex Games</title>
     <style>
 .menu{
 position: absolute;
@@ -30,9 +30,10 @@ z-index: 1;
 </style>
 </head>
 <body>
-<div class='menu'>REX GAMES</div>
+<div class='menu'>QEX GAMES</div>
 <img class='selection' src='Dream Trek/Dream Trek - beta version/Drawing.jpeg'>Dream Trek</img>
 <script>
 </script>
 </body>
+
 </html>
